fixed few native method parsing issues